--- a/privly.safariextension/Info.plist
+++ b/privly.safariextension/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>Author</key>
-	<string>Jesse Pollak</string>
+	<string>Sambuddha Basu, Jesse Pollak</string>
 	<key>Builder Version</key>
-	<string>7534.51.22</string>
+	<string>10600.4.10.7</string>
 	<key>CFBundleDisplayName</key>
 	<string>Privly</string>
 	<key>CFBundleIdentifier</key>
@@ -13,9 +13,9 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>0.1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>0.1.0</string>
 	<key>Chrome</key>
 	<dict/>
 	<key>Content</key>
@@ -30,6 +30,8 @@
 	</dict>
 	<key>Description</key>
 	<string>The official Privly Safari browser extension.</string>
+	<key>DeveloperIdentifier</key>
+	<string>34B3M269R6</string>
 	<key>ExtensionInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>Permissions</key>
