Updated Author for Safari Extensions Gallery

--- a/privly.safariextension/Info.plist
+++ b/privly.safariextension/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>Author</key>
-	<string>Sambuddha Basu, Jesse Pollak</string>
+	<string>Sambuddha Basu</string>
 	<key>Builder Version</key>
 	<string>10600.7.12</string>
 	<key>CFBundleDisplayName</key>
